2009-11-10  vadim  <vadim@vk.crocodile.org>

	* OSConfigurator_pix_os.cpp (OSConfigurator_pix_os::_printInterfaceConfiguration):
	Using configlet to generate interface configuration commands for
	PIX. Now user can change generated script if necessary without
	making changes in the fwbuilder code.

	* ObjectManipulator.cpp (ObjectManipulator::libChanged):
	Experimental change in the GUI, new feature: Now the program does
	not switch object in the editor on a single click in the tree.
	User should double click object in the tree or use context menu
	item "Edit" to open object in the editor. User can select
	different object in the tree or switch to another library while
	editor has unsaved changes. This helps, for example, when they
	need to populate large object group and need to switch between
	libraries to find objects. Switching to another library or
	accidentally clicking on a wrong object in the tree does not cause
	editor to switch.

2009-11-09  vadim  <vadim@vk.crocodile.org>

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::run): Added
	support for failover configurations for PIX.

	- Interfaces of member firewalls used for failover configuration
	should be marked as "Dedicated failover" interfaces. They should
	have normal IP addresses. These interfaces will be used to
	generate "failover" commands in the PIX configuration.

	- Cluster should have interface with the same name as failover
	interfaces of the members, with protocol set to "PIX failover" and
	members configured as usual. This interface has no ip address.

	- Other interfaces of the cluster have the same name as
	corresponding interfaces of the member firewalls, protocol "None"
	and failover groups that define members as usual. These cluster
	interfaces also have no ip address.

	- Cluster state synchronization group uses protocol "PIX state
	synchrnization" and its members should be configured as usual.
	Use failover interfaces of the members as members of the state
	sync group.
